--- a/src/Vote.css
+++ b/src/Vote.css
@@ -1,10 +1,10 @@
-.Vote .img-box {
+.vote .img-box {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
 }
 
-.Vote .img-box .vote-img {
+.vote .img-box .vote-img {
 	min-height: 300px;
 	min-width: 40vw;
 	width: 300px;
